assets/css/app.css
/* This file is for your main application css. */

pre.dungeon_preview {
  display: inline-block;
  line-height: 1;
  padding: 0.5em;
}

pre.tile_template_preview {
  display: inline-block;
  line-height: 1;
  padding: 0;
  border-radius: 0;
  font-size: 13px;
  margin: 0;
  overflow: hidden;
}

pre.embiggen {
  font-size:large;
}

pre.embiggen_most {
  font-size:xx-large;
}

pre.dungeon_preview table {
  display: inline-block;
  margin: 0;
  padding: 0;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

#dungeon_editor pre.dungeon_preview table td:hover,
#dungeon_editor pre.dungeon_preview table td span[style]:hover {
  background-color:orange !important;
}

#dungeon_editor .tile_template_preview span:hover{
  background-color:orange !important;
}

.breadcrumb > li.pull-left + li:before {content: none;}

input#tile_template_character {
  width: 3em;
  padding-left: 1.2em;
}

